--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: hubhelpr
 Title: Helper functions for CDC hubs maintainance
 Version: 0.0.0.9000
-Authors@R: 
-    person("Subekshya", "Bidari", 
+Authors@R:
+    person("Subekshya", "Bidari",
     email = "zib2@cdc.gov",
     role = c("aut", "cre"))
 Description: This package provides functions to help with the maintainance of CDC hubs.
@@ -10,3 +10,16 @@ License: Apache License (>= 2)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
+Imports:
+    dplyr,
+    forecasttools,
+    fs,
+    glue,
+    lubridate,
+    readr,
+    stringr
+Remotes:
+    forecasttools=github::cdcgov/forecasttools
+Suggests:
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
