Add function to update hub format target data (#3)
* add update_hub_target_data

* add a test

* clean up

* add r-cmd-check and test-coverage

* pre-commit fixes

* update r-cmd-check

* copilot suggestions

* update comment prefix

* Apply suggestions from code review

Co-authored-by: Dylan H. Morris <dylanhmorris@users.noreply.github.com>

* Apply suggestions from code review

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

* use withr

* review suggestions

* use httptest2

* pre-commit fix, update DESC

* save excluded locations as constant

* Apply suggestions from code review

Co-authored-by: Dylan H. Morris <dylanhmorris@users.noreply.github.com>

* update man page

---------

Co-authored-by: Dylan H. Morris <dylanhmorris@users.noreply.github.com>
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,9 +17,14 @@ Imports:
     glue,
     lubridate,
     readr,
-    stringr
+    stringr,
+    tidyselect
 Remotes:
-    forecasttools=github::cdcgov/forecasttools
+    forecasttools=github::cdcgov/forecasttools,
+    hubUtils=github::hubverse-org/hubUtils
 Suggests:
-    testthat (>= 3.0.0)
-Config/testthat/edition: 3
+    httptest2,
+    testthat (>= 3.0.0),
+    tibble,
+    withr,
+    purrr
