--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,8 +27,8 @@ Imports:
     tidyselect
 Remotes:
     forecasttools=github::cdcgov/forecasttools,
-    hubUtils=github::hubverse-org/hubUtils
-    hubData=github::hubverse-org/hubData
+    hubUtils=github::hubverse-org/hubUtils,
+    hubData=github::hubverse-org/hubData,
     epipredict=github::cmu-delphi/epipredict,
     epiprocess=github::cmu-delphi/epiprocess
 Suggests:
