--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,8 +20,8 @@ Imports:
     glue,
     hardhat,
     hubData,
+    hubEnsembles,
     lubridate,
-    readr,
     stringr,
     tidyr,
     tidyselect
