--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,4 +3,5 @@
 export(excluded_locations)
 export(generate_hub_baseline)
 export(generate_hub_ensemble)
+export(update_authorized_users)
 export(update_hub_target_data)
