Add Support For Updating Authorized Users (#16)
* try add get authorized users to hubhelpr

* run air format

* rename script

* update description and namespace

* forgot to change function name

* Update R/update_authorized_users.R

Co-authored-by: Dylan H. Morris <dylanhmorris@users.noreply.github.com>

* Update R/update_authorized_users.R

Co-authored-by: Dylan H. Morris <dylanhmorris@users.noreply.github.com>

* Update R/update_authorized_users.R

Co-authored-by: Dylan H. Morris <dylanhmorris@users.noreply.github.com>

* Update R/update_authorized_users.R

Co-authored-by: Dylan H. Morris <dylanhmorris@users.noreply.github.com>

* Update R/update_authorized_users.R

Co-authored-by: Dylan H. Morris <dylanhmorris@users.noreply.github.com>

* Update R/update_authorized_users.R

Co-authored-by: Dylan H. Morris <dylanhmorris@users.noreply.github.com>

* use dir_ls from fs over regex

* update codebase

* corrected namespace

* use load metadata

* imports resolution

* update w/ suggestions

* rerun devtools::document

* update using nulls

* update authorized users

* use pipes

---------

Co-authored-by: Dylan H. Morris <dylanhmorris@users.noreply.github.com>

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,7 +22,9 @@ Imports:
     hardhat,
     hubData,
     hubEnsembles,
+    jsonlite,
     lubridate,
+    purrr,
     stringr,
     tidyr,
     tidyselect
@@ -36,5 +38,4 @@ Suggests:
     httptest2,
     testthat (>= 3.0.0),
     tibble,
-    withr,
-    purrr
+    withr
