add utils file; run devtools::document; apply function in target files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,4 +3,5 @@
 export(excluded_locations)
 export(generate_hub_baseline)
 export(generate_hub_ensemble)
+export(get_hub_name)
 export(update_hub_target_data)
