--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,5 +3,6 @@
 export(excluded_locations)
 export(generate_hub_baseline)
 export(generate_hub_ensemble)
+export(included_locations)
 export(update_authorized_users)
 export(update_hub_target_data)
