switch back to main

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,7 +32,7 @@ Remotes:
     forecasttools=github::cdcgov/forecasttools,
     hubUtils=github::hubverse-org/hubUtils,
     hubData=github::hubverse-org/hubData,
-    epipredict=github::cmu-delphi/epipredict@dev,
+    epipredict=github::cmu-delphi/epipredict,
     epiprocess=github::cmu-delphi/epiprocess
 Suggests:
     httptest2,
