update generate_hub_baseline.R (#27)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: hubhelpr
-Title: Helper functions for CDC hubs maintainance
+Title: Helper functions for CDC hubs maintenance
 Version: 0.0.0.9000
 Authors@R:
     person("Subekshya", "Bidari",
     email = "zib2@cdc.gov",
     role = c("aut", "cre"))
-Description: This package provides functions to help with the maintainance of CDC hubs.
+Description: This package provides functions to help with the maintenance of CDC hubs.
 License: Apache License (>= 2)
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
