--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -53,3 +53,8 @@ repos:
     -   id: detect-secrets
         args: ['--baseline', '.secrets.baseline']
         exclude: package.lock.json
+-   repo: https://github.com/crate-ci/typos
+    rev: v1
+    hooks:
+    -   id: typos
+        args: ["--force-exclude"]
