fix typo in generate_oracle_output

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(check_changes_for_autoapproval)
 export(excluded_locations)
 export(generate_hub_baseline)
 export(generate_hub_ensemble)
+export(generate_oracle_output)
 export(get_hub_name)
 export(included_locations)
 export(update_authorized_users)
