run devtools::document

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(generate_hub_baseline)
 export(generate_hub_ensemble)
 export(generate_oracle_output)
 export(get_hub_name)
+export(get_webtext)
 export(included_locations)
 export(update_authorized_users)
 export(update_hub_target_data)
