run devtools::document

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(check_authorized_users)
 export(excluded_locations)
 export(generate_hub_baseline)
 export(generate_hub_ensemble)
+export(get_forecast_data)
 export(get_hub_name)
 export(included_locations)
 export(update_authorized_users)
