run devtools::document

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,3 +10,5 @@ export(get_hub_name)
 export(included_locations)
 export(update_authorized_users)
 export(update_hub_target_data)
+importFrom(rlang,":=")
+importFrom(rlang,.data)
