--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,11 +33,11 @@ Imports:
     tidyselect,
     hubUtils
 Remotes:
-    github::cdcgov/forecasttools,
-    github::hubverse-org/hubUtils,
-    github::hubverse-org/hubData,
-    github::cmu-delphi/epipredict,
-    github::cmu-delphi/epiprocess
+    forecasttools=github::cdcgov/forecasttools,
+    hubUtils=github::hubverse-org/hubUtils,
+    hubData=github::hubverse-org/hubData,
+    epipredict=github::cmu-delphi/epipredict,
+    epiprocess=github::cmu-delphi/epiprocess
 Suggests:
     httptest2,
     testthat (>= 3.0.0),
