Add Function For Generating Model Forecast Submissions  (#39)
* add unedited forecast data script

* add updates to get forecast data script

* run devtools::document

* update forecast function with review from another PR

* try to make target configurable

* attempt to follow DHM's suggestions

* follow filter suggestions

* Update R/get_forecast_data.R

* Update R/get_forecast_data.R

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

---------

Co-authored-by: Dylan H. Morris <dylanhmorris@users.noreply.github.com>
Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(excluded_locations)
 export(generate_hub_baseline)
 export(generate_hub_ensemble)
 export(generate_oracle_output)
+export(get_forecast_data)
 export(get_hub_name)
 export(get_map_data)
 export(included_locations)
