attempt to dryify code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,11 @@ export(get_forecast_data)
 export(get_hub_name)
 export(get_map_data)
 export(included_locations)
+export(summarize_ref_date_forecasts)
 export(update_authorized_users)
 export(update_hub_target_data)
+export(write_ref_date_summary)
+export(write_ref_date_summary_all)
+export(write_ref_date_summary_ensemble)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
