--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,21 +30,7 @@ repos:
     rev: v0.4.3.9017
     hooks:
     -   id: lintr
-#####
-# Java
-- repo: https://github.com/macisamuele/language-formatters-pre-commit-hooks
-  rev: v2.15.0
-  hooks:
-  - id: pretty-format-java
-    args: [--aosp,--autofix]
-#####
-# Julia
-# Due to lack of first-class Julia support, this needs Julia local install
-#   and JuliaFormatter.jl installed in the library
-# - repo: https://github.com/domluna/JuliaFormatter.jl
-#   rev: v1.0.39
-#   hooks:
-#   - id: julia-formatter
+        files: \.R$|\.Rmd$
 #####
 # Secrets
 -   repo: https://github.com/Yelp/detect-secrets
