--- a/.github/workflows/jarl-check.yaml
+++ b/.github/workflows/jarl-check.yaml
@@ -19,4 +19,4 @@ jobs:
           echo "$HOME/.cargo/bin" >> $GITHUB_PATH
 
       - name: "Run Jarl"
-        run: jarl check .
+        run: jarl check . --fix --output-format github
