--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,11 +6,13 @@ export(excluded_locations)
 export(generate_hub_baseline)
 export(generate_hub_ensemble)
 export(generate_oracle_output)
-export(get_forecast_data)
 export(get_hub_name)
-export(get_map_data)
 export(included_locations)
+export(summarize_ref_date_forecasts)
 export(update_authorized_users)
 export(update_hub_target_data)
+export(write_ref_date_summary)
+export(write_ref_date_summary_all)
+export(write_ref_date_summary_ens)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
