--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,6 @@ export(generate_hub_ensemble)
 export(generate_oracle_output)
 export(generate_webtext_block)
 export(get_hub_name)
-export(get_webtext)
 export(included_locations)
 export(summarize_ref_date_forecasts)
 export(update_authorized_users)
@@ -16,5 +15,6 @@ export(update_hub_target_data)
 export(write_ref_date_summary)
 export(write_ref_date_summary_all)
 export(write_ref_date_summary_ens)
+export(write_webtext)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
