--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -45,11 +45,11 @@ jobs:
           extra-packages: any::pkgdown, local::.
           needs: website
 
-      - name: Build site
+      - name: "Build site"
         run: pkgdown::build_site_github_pages(new_process = FALSE, install = FALSE)
         shell: Rscript {0}
 
-      - name: Upload artifact for GH pages deployment
+      - name: "Upload artifact for GH pages deployment"
         uses: actions/upload-pages-artifact@v4
         with:
           path: "docs/"
@@ -67,5 +67,5 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
-      - name: Deploy to GitHub pages
+      - name: "Deploy to GitHub pages"
         uses: actions/deploy-pages@v4
