--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(check_authorized_users)
 export(check_changes_for_autoapproval)
+export(check_data_latency)
 export(excluded_locations)
 export(generate_hub_baseline)
 export(generate_hub_ensemble)
