--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(excluded_locations)
 export(generate_hub_baseline)
 export(generate_hub_ensemble)
 export(generate_oracle_output)
+export(generate_webtext_block)
 export(get_hub_name)
 export(included_locations)
 export(summarize_ref_date_forecasts)
@@ -15,5 +16,6 @@ export(update_hub_target_data)
 export(write_ref_date_summary)
 export(write_ref_date_summary_all)
 export(write_ref_date_summary_ens)
+export(write_webtext)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
