--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,7 @@ Authors@R:
     )
 Description: This package provides functions to help with the maintenance of CDC hubs.
 License: Apache License (>= 2)
+URL: https://cdcgov.github.io/hubhelpr/, https://github.com/cdcgov/hubhelpr
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.3
