--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,7 @@ export(generate_hub_ensemble)
 export(generate_oracle_output)
 export(generate_webtext_block)
 export(get_hub_name)
-export(get_hub_repo)
+export(get_hub_repo_name)
 export(included_locations)
 export(summarize_ref_date_forecasts)
 export(update_authorized_users)
