Port Function For Generating Visualization Data In Weekly Summaries Directory (#94)
* attempt port over of generate_truth_data

* update code with suggestions from review

* both targets is null; remove hardcoded target selection

* some message cleanup; target to targets; output format

* address code review

* fix func name

* remove duplicate

---------

Co-authored-by: Subekshya Bidari <37636707+sbidari@users.noreply.github.com>
Co-authored-by: sbidari <zib2@cdc.gov>

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(update_hub_target_data)
 export(write_ref_date_summary)
 export(write_ref_date_summary_all)
 export(write_ref_date_summary_ens)
+export(write_viz_target_data)
 export(write_webtext)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
