helper functions for target identification

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,8 @@ export(generate_webtext_block)
 export(get_hub_name)
 export(get_hub_repo_name)
 export(included_locations)
+export(is_ed_target)
+export(is_hosp_target)
 export(summarize_ref_date_forecasts)
 export(update_authorized_users)
 export(update_hub_target_data)
