run air format and devtools document

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(generate_hub_baseline)
 export(generate_hub_ensemble)
 export(generate_oracle_output)
 export(generate_webtext_block)
+export(get_disease_name)
 export(get_hub_name)
 export(get_hub_repo_name)
 export(included_locations)
