--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,10 +8,10 @@ export(generate_hub_baseline)
 export(generate_hub_ensemble)
 export(generate_oracle_output)
 export(generate_webtext_block)
-export(get_alternate_target_name)
 export(get_disease_name)
 export(get_hub_name)
 export(get_hub_repo_name)
+export(get_target_data_type)
 export(included_locations)
 export(is_ed_target)
 export(is_hosp_target)
