--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(generate_webtext_block)
 export(get_disease_name)
 export(get_hub_name)
 export(get_hub_repo_name)
+export(get_target_data_type)
 export(included_locations)
 export(is_ed_target)
 export(is_hosp_target)
