--- a/actions/check-authorized-users/action.yaml
+++ b/actions/check-authorized-users/action.yaml
@@ -1,5 +1,5 @@
 name: "Check Authorized Users"
-description: "Verify that a GitHub user is authorized to modify model output directories in a Hub."
+description: "Verify that a GitHub user is authorized to modify model output directories in a Hub. Requires R and hubhelpr to be installed beforehand."
 
 inputs:
   changed_files:
@@ -12,19 +12,6 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: "Setup R"
-      uses: r-lib/actions/setup-r@v2
-      with:
-        use-public-rspm: true
-        extra-repositories: "https://hubverse-org.r-universe.dev"
-
-    - name: "Install Dependencies"
-      uses: r-lib/actions/setup-r-dependencies@v2
-      with:
-        pak-version: "devel"
-        packages: |
-          github::cdcgov/hubhelpr
-
     - name: "Check Changes for Auto-Approval"
       shell: Rscript {0}
       run: |
