--- a/actions/generate-baseline/action.yaml
+++ b/actions/generate-baseline/action.yaml
@@ -14,8 +14,7 @@ inputs:
     default: "."
   reference_date:
     description: "Reference date for the forecast (YYYY-MM-DD, must be a Saturday). Defaults to the last day of the current MMWR epiweek."
-    required: false
-    default: "latest"
+    required: true
 
 runs:
   using: "composite"
