--- a/actions/generate-baseline/action.yaml
+++ b/actions/generate-baseline/action.yaml
@@ -16,6 +16,10 @@ inputs:
     description: "Reference date for the forecast (YYYY-MM-DD, must be a Saturday). Defaults to the last day of the current MMWR epiweek."
     required: false
     default: "latest"
+  targets:
+    description: "JSON array of target suffixes for which to generate baselines (e.g., '[\"hosp\", \"prop ed visits\"]'). Defaults to all unique targets in time-series data."
+    required: false
+    default: ""
 
 runs:
   using: "composite"
@@ -26,12 +30,21 @@ runs:
       run: |
         today <- lubridate::today()
         input_date <- "${{ inputs.reference_date }}"
-        if (input_date == "latest") {
+        if (input_date == "latest" || nchar(input_date) == 0) {
           ref_date <- forecasttools::ceiling_mmwr_epiweek(today)
         } else {
           ref_date <- as.Date(input_date)
         }
-        hubhelpr::generate_hub_baseline("${{ inputs.base_hub_path }}", ref_date, "${{ inputs.disease }}")
+        input_targets <- '${{ inputs.targets }}'
+        if (nchar(input_targets) == 0) {
+          targets <- NULL
+        } else {
+          targets <- jsonlite::fromJSON(input_targets)
+        }
+        hubhelpr::generate_hub_baseline(
+          "${{ inputs.base_hub_path }}", ref_date,
+          "${{ inputs.disease }}", targets
+        )
         writeLines(sprintf("date=%s", today), Sys.getenv("GITHUB_OUTPUT"))
 
     - name: "Commit Changes"
