--- a/actions/generate-ensemble/action.yaml
+++ b/actions/generate-ensemble/action.yaml
@@ -16,10 +16,10 @@ inputs:
     description: "Reference date for the forecast (YYYY-MM-DD, must be a Saturday). Defaults to the last day of the current MMWR epiweek."
     required: false
     default: "latest"
-  ensemble_targets:
-    description: "JSON/YAML array of forecast targets for which to generate ensembles (e.g., '[\"hosp\", \"prop ed visits\"]')."
+  targets:
+    description: "JSON array of target suffixes for which to generate ensembles (e.g., '[\"hosp\", \"prop ed visits\"]'). Defaults to all unique targets in time-series data."
     required: false
-    default: '["hosp", "prop ed visits"]'
+    default: ""
 
 runs:
   using: "composite"
@@ -30,12 +30,17 @@ runs:
       run: |
         today <- lubridate::today()
         input_date <- "${{ inputs.reference_date }}"
-        if (input_date == "latest") {
+        if (input_date == "latest" || nchar(input_date) == 0) {
           ref_date <- forecasttools::ceiling_mmwr_epiweek(today)
         } else {
           ref_date <- as.Date(input_date)
         }
-        targets <- jsonlite::fromJSON('${{ inputs.ensemble_targets }}')
+        input_targets <- '${{ inputs.targets }}'
+        if (nchar(input_targets) == 0) {
+          targets <- NULL
+        } else {
+          targets <- jsonlite::fromJSON(input_targets)
+        }
         hubhelpr::generate_hub_ensemble(
           "${{ inputs.base_hub_path }}", ref_date,
           "${{ inputs.disease }}", targets
