devtools document and air format

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,10 +12,13 @@ export(get_disease_name)
 export(get_hub_name)
 export(get_hub_repo_name)
 export(get_target_data_type)
+export(get_target_label)
+export(get_unique_targets)
 export(included_locations)
 export(is_ed_target)
 export(is_hosp_target)
 export(summarize_ref_date_forecasts)
+export(supported_diseases)
 export(update_hub_target_data)
 export(write_ref_date_summary)
 export(write_ref_date_summary_all)
