--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(get_unique_targets)
 export(included_locations)
 export(is_ed_target)
 export(is_hosp_target)
+export(recognized_diseases)
 export(summarize_ref_date_forecasts)
 export(supported_diseases)
 export(update_hub_target_data)
