modularize and update

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,10 @@ export(generate_webtext_block)
 export(get_disease_name)
 export(get_hub_name)
 export(get_hub_repo_name)
+export(get_hubverse_format_nhsn_data)
+export(get_hubverse_format_nssp_data)
+export(get_nhsn_col_name)
+export(get_nssp_col_name)
 export(get_target_data_type)
 export(included_locations)
 export(is_ed_target)
