--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,8 @@ export(get_hubverse_format_nssp_data)
 export(get_nhsn_col_name)
 export(get_nssp_col_name)
 export(get_target_data_type)
+export(get_target_label)
+export(get_unique_targets)
 export(included_locations)
 export(is_ed_target)
 export(is_hosp_target)
