--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(get_nhsn_col_name)
 export(get_nssp_col_name)
 export(get_target_data_type)
 export(get_target_label)
+export(get_target_names)
 export(get_unique_targets)
 export(included_locations)
 export(is_ed_target)
