move handling from action to R code

--- a/actions/generate-viz-data/action.yaml
+++ b/actions/generate-viz-data/action.yaml
@@ -44,8 +44,8 @@ runs:
         disease <- "${{ inputs.disease }}"
 
         input_targets <- '${{ inputs.targets }}'
-        if (input_targets == "") {
-          targets <- hubhelpr::get_unique_hub_targets(base_hub_path)
+        if (nchar(input_targets) == 0) {
+          targets <- NULL
         } else {
           targets <- jsonlite::fromJSON(input_targets)
         }
